2016-10-18	"Nothing is impossible for the man who doesn't have to do it
		 himself."

		include/innocent-pear/kthxbai.h :
		- rewrote value splitting, using std::conditional<...>

		include/innocent-pear/bbq.h :
		- added a new possibility for do_op<...>(...) and
		  do_inv_op<...>(...)

		include/innocent-pear/host/srsly.h :
		- updated to match include/innocent-pear/bbq.h

		test/test-dawg-syn.cc ,
		test/test-dawg-syn.good :
		- really pared down...

2016-10-15	First release, sort of.

		doc/20161015-test-doge.png :
		- new; part of IDA disassembly of an output x86-32 program

		README.md :
		- slightly rewritten
		- added doc/20161015-test-doge.png

2016-10-13	Strip symbols simply by saying `-s'.  (4)

		include/innocent-pear/teh.h :
		- new

		include/innocent-pear/kthxbai.h ,
		include/innocent-pear/omg.h :
		- now uses teh.h for template-instantiated static data items

		share/innocent-pear/doge-02.cc :
		- _.innocent_pear.text.startup.start now has hidden visibility

		GNUmakefile :
		- added teh.h as a dependency
		- now passes `-W' to `readelf -e'

2016-10-12	Strip symbols simply by saying `-s'.  (3)

		share/innocent-pear/doge-01.cc ,
		share/innocent-pear/doge-45.cc ,
		share/innocent-pear/doge-99.cc ,
		share/innocent-pear/doge-i.h ,
		share/innocent-pear/doge-n.ld :
		- made "exported" internal symbols have hidden visibility,
		  especially under ELF

		share/innocent-pear/sleepier.cc :
		- removed needless string obfuscation...

		include/innocent-pear/rofl.h :
		- rofl_impl_syscall<...>::syscall_raw for ARM:
		  - gave it hidden visibility under ELF
		  - removed special-case code for g++ >= 5, since it still
		    makes the compiler error out anyway...

		include/innocent-pear/kthxbai.h :
		- added visibility("hidden") attribute to kthxbai_impl<...>
		  constructor, to try to prevent it from adding extra symbol
		  table entries for static `x2' variables

		include/innocent-pear/omg.h :
		- now invokes rofl<...>::time(.) with a (scrambled) non-null